<resources>
    <string name="app_name">Wellbeing</string>
    <string name="logo_description">Logo of the app</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="mindfulness">Mindfulness</string>
    <string name="breathe">Breathe</string>
    <string name="_30_second">30 second</string>
    <string name="placeholder_zero">0</string>
    <string name="resume">Resume</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save">Save</string>
    <string name="activity_completed">Activity Completed</string>
    <string name="return_to_home">Return to Home</string>
</resources>