<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E1E5FB"
    tools:context=".LoginActivity">


    <androidx.cardview.widget.CardView
        android:layout_width="370dp"
        android:layout_height="270dp"
        android:layout_centerInParent="true"
        android:elevation="5dp"
        app:cardCornerRadius="10dp">


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">


            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/outline"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="20dp" />


            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:autofillHints="password"
                android:background="@drawable/outline"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="20dp" />


            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/password"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/outline"
                android:padding="15dp"
                android:text="@string/login" />


        </RelativeLayout>


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="167dp"
        android:layout_marginTop="157dp"
        android:fontFamily="casual"
        android:text="WellBeing"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
</RelativeLayout>

